feat: control which methods to be generated from ui for the project user is generating

--- a/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-controller.go.tmpl
@@ -27,26 +27,8 @@ func New{{.CapsResourceNameSingular}}Controller() (*{{.CapsResourceNameSingular}
 	}, nil
 }
 
+{{ if .IsRESTCreateAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Create{{.CapsResourceNameSingular}}(context *gin.Context) {
-	// validate input
-	var input models.{{.CapsResourceNameSingular}}
-	if err := context.ShouldBindJSON(&input); err != nil {
-		log.Error(err)
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	// trigger {{.SmallResourceNameSingular}} creation
-	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}(&input); err != nil {
-		log.Error(err)
-		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	context.JSON(http.StatusCreated, gin.H{"message": "{{.CapsResourceNameSingular}} created successfully"})
-}
-
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Update{{.CapsResourceNameSingular}}(context *gin.Context) {
 	// validate input
 	var input models.{{.CapsResourceNameSingular}}
 	if err := context.ShouldBindJSON(&input); err != nil {
@@ -55,24 +37,33 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 		return
 	}
 
-	// trigger {{.SmallResourceNameSingular}} update
-	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(context.Param("id"), &input); err != nil {
+	// trigger {{.SmallResourceNameSingular}} creation
+	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}(&input)
+	 if err != nil {
 		log.Error(err)
-		if errors.Is(err, nosqls.ErrNotExists) {
-            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-            return
-        }
-        if errors.Is(err, nosqls.ErrInvalidObjectID) {
-            context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-            return
-        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"message": "{{.CapsResourceNameSingular}} updated successfully"})
+	context.JSON(http.StatusCreated, {{.SmallResourceNameSingular}}Created)
 }
+{{ end }}
 
+{{ if .IsRESTListAllowed }}
+func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) List{{.CapsResourceNamePlural}}(context *gin.Context) {
+	// trigger all {{.SmallResourceNamePlural}} fetching
+	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
+	if err != nil {
+		log.Error(err)
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	context.JSON(http.StatusOK, {{.SmallResourceNamePlural}})
+}
+{{ end }}
+
+{{ if .IsRESTGetAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Fetch{{.CapsResourceNameSingular}}(context *gin.Context) {
 	// trigger {{.SmallResourceNameSingular}} fetching
 	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(context.Param("id"))
@@ -99,7 +90,38 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 
 	context.JSON(http.StatusOK, {{.SmallResourceNameSingular}})
 }
+{{ end }}
 
+{{ if .IsRESTUpdateAllowed }}
+func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Update{{.CapsResourceNameSingular}}(context *gin.Context) {
+	// validate input
+	var input models.{{.CapsResourceNameSingular}}
+	if err := context.ShouldBindJSON(&input); err != nil {
+		log.Error(err)
+		context.JSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
+		return
+	}
+
+	// trigger {{.SmallResourceNameSingular}} update
+	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(context.Param("id"), &input); err != nil {
+		log.Error(err)
+		if errors.Is(err, nosqls.ErrNotExists) {
+            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+            return
+        }
+        if errors.Is(err, nosqls.ErrInvalidObjectID) {
+            context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+            return
+        }
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	context.JSON(http.StatusNoContent)
+}
+{{ end }}
+
+{{ if .IsRESTDeleteAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Delete{{.CapsResourceNameSingular}}(context *gin.Context) {
 	// trigger {{.SmallResourceNameSingular}} deletion
 	if err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(context.Param("id")); err != nil {
@@ -116,37 +138,30 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{
-		"message": "{{.CapsResourceNameSingular}} deleted successfully",
-	})
+	context.JSON(http.StatusNoContent)
 }
+{{ end }}
 
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) List{{.CapsResourceNamePlural}}(context *gin.Context) {
-	// trigger all {{.SmallResourceNamePlural}} fetching
-	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
-	if err != nil {
-		log.Error(err)
-		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	context.JSON(http.StatusOK, {{.SmallResourceNamePlural}})
-}
-
+{{ if .IsRESTPatchAllowed }}
 func (*{{.CapsResourceNameSingular}}Controller) Patch{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "PATCH",
 	})
 }
+{{ end }}
 
+{{ if .IsRESTOptionsAllowed }}
 func (*{{.CapsResourceNameSingular}}Controller) Options{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "OPTIONS",
 	})
 }
+{{ end }}
 
+{{ if .IsRESTHeadAllowed }}
 func (*{{.CapsResourceNameSingular}}Controller) Head{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "HEAD",
 	})
 }
+{{ end }}
