feat: control which methods to be generated from ui for the project user is generating for grpc

--- a/frameworks/common-files/main.go.tmpl
+++ b/frameworks/common-files/main.go.tmpl
@@ -160,28 +160,28 @@ func main() {
     v1 := router.Group("/v1")
     {
         {{range $i, $v := .RestResources}}
-            {{ if $.IsRESTCreateAllowed }}
+            {{ if $v.IsRESTCreateAllowed }}
             v1.POST("/{{$v.SmallResourceNamePlural}}", {{$v.SmallResourceNameSingular}}Controller.Create{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTListAllowed }}
+            {{ if $v.IsRESTListAllowed }}
             v1.GET("/{{$v.SmallResourceNamePlural}}", {{$v.SmallResourceNameSingular}}Controller.List{{$v.CapsResourceNamePlural}})
             {{ end }}
-            {{ if $.IsRESTGetAllowed }}
+            {{ if $v.IsRESTGetAllowed }}
             v1.GET("/{{$v.SmallResourceNamePlural}}/:id", {{$v.SmallResourceNameSingular}}Controller.Fetch{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTUpdateAllowed }}
+            {{ if $v.IsRESTPutAllowed }}
             v1.PUT("/{{$v.SmallResourceNamePlural}}/:id", {{$v.SmallResourceNameSingular}}Controller.Update{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTDeleteAllowed }}
+            {{ if $v.IsRESTDeleteAllowed }}
             v1.DELETE("/{{$v.SmallResourceNamePlural}}/:id", {{$v.SmallResourceNameSingular}}Controller.Delete{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTPatchAllowed }}
+            {{ if $v.IsRESTPatchAllowed }}
             v1.PATCH("/{{$v.SmallResourceNamePlural}}/:id", {{$v.SmallResourceNameSingular}}Controller.Patch{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTHeadAllowed }}
+            {{ if $v.IsRESTHeadAllowed }}
             v1.HEAD("/{{$v.SmallResourceNamePlural}}", {{$v.SmallResourceNameSingular}}Controller.Head{{$v.CapsResourceNameSingular}})
             {{ end }}
-            {{ if $.IsRESTOptionsAllowed }}
+            {{ if $v.IsRESTOptionsAllowed }}
             v1.OPTIONS("/{{$v.SmallResourceNamePlural}}", {{$v.SmallResourceNameSingular}}Controller.Options{{$v.CapsResourceNameSingular}})
             {{ end }}
         {{end}}
