--- a/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/dao.go.tmpl
@@ -44,7 +44,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{
 }
 {{ end }}
 
-{{ if .IsRESTUpdateAllowed }}
+{{ if .IsRESTPutAllowed }}
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
 	if id != {{.SmallResourceNameSingular}}.Id {
 		return nil, errors.New("id and payload don't match")
