--- a/frameworks/go-gin-server/pkg/rest/server/daos/mongodb-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/mongodb-dao.go.tmpl
@@ -93,7 +93,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{
 }
 {{ end }}
 
-{{ if .IsRESTUpdateAllowed }}
+{{ if .IsRESTPutAllowed }}
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id string, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
 	if id != {{.SmallResourceNameSingular}}.ID {
 		log.Debugf("id(%s) and payload(%s) don't match", id, {{.SmallResourceNameSingular}}.ID)
