--- a/frameworks/go-grpc-server/api/v1/nosqls-api.proto.tmpl
+++ b/frameworks/go-grpc-server/api/v1/nosqls-api.proto.tmpl
@@ -5,11 +5,21 @@ option go_package="./api/v1;pb";
 
 service {{ .CapsResourceNameSingular }}Service {
     rpc Ping ({{.CapsResourceNameSingular}}Request) returns ({{.CapsResourceNameSingular}}Response) {};
+    {{ if .IsGRPCCreateAllowed }}
     rpc Create{{.CapsResourceNameSingular}} (Create{{.CapsResourceNameSingular}}Request) returns (Create{{.CapsResourceNameSingular}}Response) {};
-    rpc Get{{.CapsResourceNameSingular}} (Get{{.CapsResourceNameSingular}}Request) returns (Get{{.CapsResourceNameSingular}}Response) {};
-    rpc Update{{.CapsResourceNameSingular}} (Update{{.CapsResourceNameSingular}}Request) returns (Update{{.CapsResourceNameSingular}}Response) {};
-    rpc Delete{{.CapsResourceNameSingular}} (Delete{{.CapsResourceNameSingular}}Request) returns (Delete{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCListAllowed }}
     rpc List{{.CapsResourceNamePlural}} (List{{.CapsResourceNamePlural}}Request) returns (List{{.CapsResourceNamePlural}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCGetAllowed }}
+    rpc Get{{.CapsResourceNameSingular}} (Get{{.CapsResourceNameSingular}}Request) returns (Get{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCPutAllowed }}
+    rpc Update{{.CapsResourceNameSingular}} (Update{{.CapsResourceNameSingular}}Request) returns (Update{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCDeleteAllowed }}
+    rpc Delete{{.CapsResourceNameSingular}} (Delete{{.CapsResourceNameSingular}}Request) returns (Delete{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
 }
 
 message {{.CapsResourceNameSingular}} {
