--- a/frameworks/go-grpc-server/api/v1/sqls-api.proto.tmpl
+++ b/frameworks/go-grpc-server/api/v1/sqls-api.proto.tmpl
@@ -5,11 +5,21 @@ option go_package="./api/v1;pb";
 
 service {{ .CapsResourceNameSingular }}Service {
     rpc Ping ({{.CapsResourceNameSingular}}Request) returns ({{.CapsResourceNameSingular}}Response) {};
+    {{ if .IsGRPCCreateAllowed }}
     rpc Create{{.CapsResourceNameSingular}} (Create{{.CapsResourceNameSingular}}Request) returns (Create{{.CapsResourceNameSingular}}Response) {};
-    rpc Get{{.CapsResourceNameSingular}} (Get{{.CapsResourceNameSingular}}Request) returns (Get{{.CapsResourceNameSingular}}Response) {};
-    rpc Update{{.CapsResourceNameSingular}} (Update{{.CapsResourceNameSingular}}Request) returns (Update{{.CapsResourceNameSingular}}Response) {};
-    rpc Delete{{.CapsResourceNameSingular}} (Delete{{.CapsResourceNameSingular}}Request) returns (Delete{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCListAllowed }}
     rpc List{{.CapsResourceNamePlural}} (List{{.CapsResourceNamePlural}}Request) returns (List{{.CapsResourceNamePlural}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCGetAllowed }}
+    rpc Get{{.CapsResourceNameSingular}} (Get{{.CapsResourceNameSingular}}Request) returns (Get{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCPutAllowed }}
+    rpc Update{{.CapsResourceNameSingular}} (Update{{.CapsResourceNameSingular}}Request) returns (Update{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
+    {{ if .IsGRPCDeleteAllowed }}
+    rpc Delete{{.CapsResourceNameSingular}} (Delete{{.CapsResourceNameSingular}}Request) returns (Delete{{.CapsResourceNameSingular}}Response) {};
+    {{ end }}
 }
 
 message {{.CapsResourceNameSingular}} {
@@ -19,6 +29,7 @@ message {{.CapsResourceNameSingular}} {
     {{end}}
 }
 
+{{ if .IsGRPCCreateAllowed }}
 message Create{{.CapsResourceNameSingular}}Request {
     {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 1;
 }
@@ -26,7 +37,19 @@ message Create{{.CapsResourceNameSingular}}Request {
 message Create{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
+{{ end }}
 
+{{ if .IsGRPCListAllowed }}
+message List{{.CapsResourceNamePlural}}Request {
+
+}
+
+message List{{.CapsResourceNamePlural}}Response {
+    repeated {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 1;
+}
+{{ end }}
+
+{{ if .IsGRPCGetAllowed }}
 message Get{{.CapsResourceNameSingular}}Request {
     int64 id = 1;
 }
@@ -34,7 +57,9 @@ message Get{{.CapsResourceNameSingular}}Request {
 message Get{{.CapsResourceNameSingular}}Response {
     {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 1;
 }
+{{ end }}
 
+{{ if .IsGRPCPutAllowed }}
 message Update{{.CapsResourceNameSingular}}Request {
     int64 id = 1;
     {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 2;
@@ -43,7 +68,9 @@ message Update{{.CapsResourceNameSingular}}Request {
 message Update{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
+{{ end }}
 
+{{ if .IsGRPCDeleteAllowed }}
 message Delete{{.CapsResourceNameSingular}}Request {
     int64 id = 1;
 }
@@ -51,14 +78,7 @@ message Delete{{.CapsResourceNameSingular}}Request {
 message Delete{{.CapsResourceNameSingular}}Response {
     string message = 1;
 }
-
-message List{{.CapsResourceNamePlural}}Request {
-
-}
-
-message List{{.CapsResourceNamePlural}}Response {
-    repeated {{.CapsResourceNameSingular}} {{.SmallResourceNameSingular}} = 1;
-}
+{{ end }}
 
 message {{.CapsResourceNameSingular}}Request {}
 
