--- a/frameworks/go-grpc-server/pkg/grpc/server/controllers/nosqls-controller.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/controllers/nosqls-controller.go.tmpl
@@ -34,6 +34,7 @@ func (*{{.CapsResourceNameSingular}}Server) Ping(_ context.Context, _ *pb.{{.Cap
 	}, nil
 }
 
+{{ if .IsGRPCCreateAllowed }}
 func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Create{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Create{{.CapsResourceNameSingular}}Request) (*pb.Create{{.CapsResourceNameSingular}}Response, error) {
 	{{.SmallResourceNameSingular}} := models.{{.CapsResourceNameSingular}}{
         {{range $k, $v := .Fields}}
@@ -52,8 +53,37 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
 		Message: "{{.CapsResourceNameSingular}} Created Successfully!",
 	}, nil
 }
+{{ end }}
 
+{{ if .IsGRPCListAllowed }}
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) List{{.CapsResourceNamePlural}}(_ context.Context, _ *pb.List{{.CapsResourceNamePlural}}Request) (*pb.List{{.CapsResourceNamePlural}}Response, error) {
+	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
 
+	if err != nil {
+		return nil, err
+	}
+
+	var {{.SmallResourceNameSingular}}List []*pb.{{.CapsResourceNameSingular}}
+	for _, retrieved{{.CapsResourceNameSingular}} := range {{.SmallResourceNamePlural}} {
+		{{.SmallResourceNameSingular}}Response := &pb.{{.CapsResourceNameSingular}}{
+			Id: retrieved{{.CapsResourceNameSingular}}.ID,
+            {{range $k, $v := .Fields}}
+                {{if eq $k "ID"}}
+                {{else}}
+                    {{$k}}:  retrieved{{$.CapsResourceNameSingular}}.{{$k}},
+                {{end}}
+            {{end}}
+		}
+		{{.SmallResourceNameSingular}}List = append({{.SmallResourceNameSingular}}List, {{.SmallResourceNameSingular}}Response)
+	}
+
+	return &pb.List{{.CapsResourceNamePlural}}Response{
+		{{.CapsResourceNameSingular}}: {{.SmallResourceNameSingular}}List,
+	}, nil
+}
+{{ end }}
+
+{{ if .IsGRPCGetAllowed }}
 func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(ctx context.Context, req *pb.Get{{.CapsResourceNameSingular}}Request) (*pb.Get{{.CapsResourceNameSingular}}Response, error) {
     id := req.GetId()
 	retrieved{{.CapsResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
@@ -85,33 +115,9 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
 		{{.CapsResourceNameSingular}}: {{.SmallResourceNameSingular}}Response,
 	}, nil
 }
+{{ end }}
 
-func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) List{{.CapsResourceNamePlural}}(_ context.Context, _ *pb.List{{.CapsResourceNamePlural}}Request) (*pb.List{{.CapsResourceNamePlural}}Response, error) {
-	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
-
-	if err != nil {
-		return nil, err
-	}
-
-	var {{.SmallResourceNameSingular}}List []*pb.{{.CapsResourceNameSingular}}
-	for _, retrieved{{.CapsResourceNameSingular}} := range {{.SmallResourceNamePlural}} {
-		{{.SmallResourceNameSingular}}Response := &pb.{{.CapsResourceNameSingular}}{
-			Id: retrieved{{.CapsResourceNameSingular}}.ID,
-            {{range $k, $v := .Fields}}
-                {{if eq $k "ID"}}
-                {{else}}
-                    {{$k}}:  retrieved{{$.CapsResourceNameSingular}}.{{$k}},
-                {{end}}
-            {{end}}
-		}
-		{{.SmallResourceNameSingular}}List = append({{.SmallResourceNameSingular}}List, {{.SmallResourceNameSingular}}Response)
-	}
-
-	return &pb.List{{.CapsResourceNamePlural}}Response{
-		{{.CapsResourceNameSingular}}: {{.SmallResourceNameSingular}}List,
-	}, nil
-}
-
+{{ if .IsGRPCPutAllowed }}
 func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Update{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Update{{.CapsResourceNameSingular}}Request) (*pb.Update{{.CapsResourceNameSingular}}Response, error) {
 	id := req.GetId()
 
@@ -134,7 +140,9 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
 		Message: "{{.CapsResourceNameSingular}} Updated Successfully!",
 	}, nil
 }
+{{ end }}
 
+{{ if .IsGRPCDeleteAllowed }}
 func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Delete{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Delete{{.CapsResourceNameSingular}}Request) (*pb.Delete{{.CapsResourceNameSingular}}Response, error) {
 	id := req.GetId()
 	err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(id)
@@ -147,3 +155,4 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
 		Message: "{{.CapsResourceNameSingular}} Deleted Successfully!",
 	}, nil
 }
+{{ end }}
