--- a/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-column-based-controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/nosqls-column-based-controller.go.tmpl
@@ -2,15 +2,11 @@ package controllers
 
 import (
 	"github.com/gin-gonic/gin"
-    "{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/nosqls"
+  "github.com/google/uuid"
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 	"{{.GitPlatformURL}}/{{.GitPlatformUserName}}/{{.GitRepositoryName}}/{{.NodeName}}/pkg/rest/server/services"
 	log "github.com/sirupsen/logrus"
 	"net/http"
-	"errors"
-	"os"
-    "go.opentelemetry.io/otel/trace"
-    "go.opentelemetry.io/otel/attribute"
 )
 
 type {{.CapsResourceNameSingular}}Controller struct {
@@ -37,9 +33,10 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 		return
 	}
 
+  input.Id = uuid.New().String()
 	// trigger {{.SmallResourceNameSingular}} creation
-	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}(&input)
-	 if err != nil {
+	{{.SmallResourceNameSingular}}Created, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}(&input)
+	if err != nil {
 		log.Error(err)
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
@@ -65,28 +62,15 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 
 {{ if .IsRESTGetAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Fetch{{.CapsResourceNameSingular}}(context *gin.Context) {
+	id := context.Param("id")
+
 	// trigger {{.SmallResourceNameSingular}} fetching
-	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(context.Param("id"))
+	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
 	if err != nil {
 		log.Error(err)
-		if errors.Is(err, nosqls.ErrNotExists) {
-            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-            return
-        }
-        if errors.Is(err, nosqls.ErrInvalidObjectID) {
-            context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-            return
-        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-    serviceName := os.Getenv("SERVICE_NAME")
-    collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
-    if len(serviceName) > 0 && len(collectorURL) > 0 {
-        // get the current span by the request context
-        currentSpan := trace.SpanFromContext(context.Request.Context())
-        currentSpan.SetAttributes(attribute.String("{{.SmallResourceNameSingular}}.id", {{.SmallResourceNameSingular}}.ID))
-    }
 
 	context.JSON(http.StatusOK, {{.SmallResourceNameSingular}})
 }
@@ -94,6 +78,8 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 
 {{ if .IsRESTPutAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Update{{.CapsResourceNameSingular}}(context *gin.Context) {
+	id := context.Param("id")
+
 	// validate input
 	var input models.{{.CapsResourceNameSingular}}
 	if err := context.ShouldBindJSON(&input); err != nil {
@@ -103,66 +89,28 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 	}
 
 	// trigger {{.SmallResourceNameSingular}} update
-	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(context.Param("id"), &input); err != nil {
+	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(id,&input); err != nil {
 		log.Error(err)
-		if errors.Is(err, nosqls.ErrNotExists) {
-            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-            return
-        }
-        if errors.Is(err, nosqls.ErrInvalidObjectID) {
-            context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-            return
-        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"message": "{{.CapsResourceNameSingular}} updated successfully"})
+	context.JSON(http.StatusNoContent)
 
 }
 {{ end }}
 
 {{ if .IsRESTDeleteAllowed }}
 func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Delete{{.CapsResourceNameSingular}}(context *gin.Context) {
+  id := context.Param("id")
+
 	// trigger {{.SmallResourceNameSingular}} deletion
-	if err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(context.Param("id")); err != nil {
+	if err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(id); err != nil {
 		log.Error(err)
-        if errors.Is(err, nosqls.ErrNotExists) {
-            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-            return
-        }
-        if errors.Is(err, nosqls.ErrInvalidObjectID) {
-            context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-            return
-        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	context.JSON(http.StatusOK, gin.H{"message": "{{.CapsResourceNameSingular}} deleted successfully"})
-}
-{{ end }}
-
-{{ if .IsRESTPatchAllowed }}
-func (*{{.CapsResourceNameSingular}}Controller) Patch{{.CapsResourceNameSingular}}(context *gin.Context) {
-	context.JSON(http.StatusOK, gin.H{
-		"message": "PATCH",
-	})
-}
-{{ end }}
-
-{{ if .IsRESTOptionsAllowed }}
-func (*{{.CapsResourceNameSingular}}Controller) Options{{.CapsResourceNameSingular}}(context *gin.Context) {
-	context.JSON(http.StatusOK, gin.H{
-		"message": "OPTIONS",
-	})
-}
-{{ end }}
-
-{{ if .IsRESTHeadAllowed }}
-func (*{{.CapsResourceNameSingular}}Controller) Head{{.CapsResourceNameSingular}}(context *gin.Context) {
-	context.JSON(http.StatusOK, gin.H{
-		"message": "HEAD",
-	})
+	context.JSON(http.StatusNoContent)
 }
 {{ end }}
